--- a/SpringMVCTutadvisor/src/main/webapp/css/suggestioncss.css
+++ b/SpringMVCTutadvisor/src/main/webapp/css/suggestioncss.css
@@ -23,25 +23,28 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 #content {
 	display: block;
 	width: 100%;
-	background: grey;
+	background: White;
 	padding: 25px 20px;
 	padding-bottom: 35px;
 	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 	-moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+
 }
 
 #w {
 	font-size: medium; 
 	display : block;
 	width: 750px;
-	margin: 0 auto;
+	margin: 75px;
 	padding-top: 30px;
 	padding-bottom: 45px;
 	background-color: white;
 	display: block;
 	border: medium;
-	background: grey;
+	background: white;
+	padding-left: 35px; 
+	
 }
 
 body {
@@ -50,7 +53,8 @@ body {
 	color: #313131;
 	font-size: 62.5%;
 	line-height: 1;
-	/* color: white; */
+}
+#info > form:nth-child(1) > p:nth-child(5){
 }
 
 /** clearfix **/
